--- a/about.html
+++ b/about.html
@@ -8,10 +8,60 @@
 </head>
 <body>
     <header>
-        <h1>About Nexura</h1>
+        <div class="container">
+            <div class="logo">
+                <h1>Why Nexura</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">Why Nexura</a></li>
+                    <li><a href="token.html">Token</a></li>
+                    <li><a href="whitepaper.html">Whitepaper</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <p>Nexura is a blockchain-based project that connects investors with profitable assets through innovative sidechains. Our mission is to deliver sustainable value while supporting local communities and renewable energy projects.</p>
+<!-- Vision Section -->
+    <section id="vision" class="token">
+		<div class="container">
+			<h2>Nexura’s Vision</h2>
+			<p>At Nexura, we aim to build a strong and sustainable digital economic ecosystem. We believe that technological and commercial progress should combine innovation in blockchain technology with traditional assets like land, real estate, and renewable energy. With NexaCash (NXC), we offer customers the opportunity to invest in real, digitally-backed assets.</p>
+		</div>
+	</section>
+
+<!-- Why Choose Section -->
+    <section id="why" class="token">
+		<div class="container">
+			<h2>Why Choose Nexura?</h2>
+			<ul>
+				<li>Investment in Real Assets: Invest in real projects supported by assets such as land, real estate, and renewable energy.</li>
+				<li>Fair Distribution System: Returns are fairly distributed among project participants, with a large share allocated to supporting investors.</li>
+				<li>Advanced Technology: We use the latest blockchain technologies to ensure security and transparency in all processes.</li>
+				<li>Optimized Mining System: Nexura relies on an optimized mining system that reduces carbon emissions, contributing to environmental preservation and sustainability.</li>
+				<li>High Growth Potential: Early investors have the opportunity to achieve high returns by investing in the early stages.</li>
+				<li>Free Trading Opportunities: After completing the ICO, the token will be listed on PancakeSwap for immediate trading.</li>
+			</ul>
+		</div>	
+    </section>
+<!-- Future Projects Section -->
+    <section id="projects" class="token">
+		<div class="container">
+			<h2>Discover Nexura’s Future Projects</h2>
+			<ul>
+				<li><strong>NexaEstate:</strong> Token: NexaProp (NXP) - Fully-owned real estate, returns are distributed to NexaProp holders via NexaCash (NXC).</li>
+				<li><strong>NexaLand:</strong> Token: NexaAgri (NXA) - Agricultural assets, returns are distributed to NexaAgri holders via NexaCash (NXC).</li>
+				<li><strong>NexaEnergy:</strong> Token: NexaPower (NXP) - Renewable energy stations, returns are distributed to NexaPower holders via NexaCash (NXC).</li>
+				<li><strong>NexaFactory:</strong> Token: NexaMach (NXM) - Factories and machinery, returns are distributed to NexaMach holders via NexaCash (NXC).</li>
+				<li><strong>NexaForest:</strong> Token: NexaWood (NXW) - Forests and crops, returns are distributed to NexaWood holders via NexaCash (NXC).</li>
+				<li><strong>NexaLiveStocks:</strong> Token: NexaBeast (NXB) - Livestock assets, returns are distributed to NexaBeast holders via NexaCash (NXC).</li>
+				<li><strong>NexaTransport:</strong> Token: NexaFleet (NXF) - Commercial transportation assets, returns are distributed to NexaFleet holders via NexaCash (NXC).</li>
+			</ul>
+		</div>	
+    </section>
+	
     </main>
     <footer>
         <p>© 2024 Nexura. All rights reserved.</p>
