--- a/token.html
+++ b/token.html
@@ -3,23 +3,138 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>NXC Token ICO - Nexura</title>
     <link rel="stylesheet" href="style.css">
-    <title>Token - Nexura</title>
 </head>
 <body>
     <header>
-        <h1>NexaCash Token (NXC)</h1>
+        <div class="container">
+            <div class="logo">
+                <h1>NXC Token ICO</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">Why Nexura</a></li>
+                    <li><a href="token.html">Token</a></li>
+                    <li><a href="whitepaper.html">Whitepaper</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <p>The NexaCash Token (NXC) powers the Nexura ecosystem. Built on the Binance Smart Chain, it enables efficient and secure transactions while supporting asset management and community growth.</p>
-        <ul>
-            <li>Symbol: NXC</li>
-            <li>Blockchain: Binance Smart Chain</li>
-            <li>Use Cases: Asset trading, profit distribution, and more.</li>
-        </ul>
+        <section class="ico-info">
+            <div class="container">
+                <h2>Introduction to NXC Token</h2>
+                <p>The <strong>NXC</strong> token is the primary means of exchange within the <strong>Nexura</strong> ecosystem. NXC will be used to pay transaction fees, distribute returns generated from assets, and also be used to purchase future assets-backed coins. Initially, the NXC token will be available on the <strong>Binance Smart Chain</strong>, but once the new Nexura blockchain is launched, the NXC token will be transferred to the new blockchain.</p>
+                
+                <h3>Tokenomics</h3>
+                <h4>Total Supply</h4>
+                <p><strong>100,000,000 NXC tokens</strong></p>
+
+                <h4>Distribution</h4>
+                <ul>
+                    <li><strong>10%</strong> (10,000,000 NXC) will be issued as tokens on the <strong>Binance Smart Chain</strong>:
+                        <ul>
+                            <li><strong>1%</strong> (1,000,000 NXC) for the team and advisors.</li>
+                            <li><strong>1%</strong> (1,000,000 NXC) for marketers and advertisements.</li>
+                            <li><strong>8%</strong> (8,000,000 NXC) will be sold to the community and investors in the ICO.</li>
+                        </ul>
+                    </li>
+                    <li><strong>90%</strong> (90,000,000 NXC) of the total supply will be mined after the official launch of the Nexura project and will not be issued as tokens.</li>
+                </ul>
+                <p>After the ICO ends, the token will be available for free trading on <strong>PancakeSwap</strong>, allowing investors to fully benefit from the features of the token.</p>
+
+                <h3>ICO Phases for NXC Token</h3>
+                <p>The NXC token will be available in <strong>8 phases</strong> during the ICO, with the price increasing by <strong>68%</strong> after each phase. This gives early investors a great opportunity to acquire tokens at lower prices before they rise in later phases.</p>
+
+                <div class="table-container">
+                    <table class="ico-table">
+                        <thead>
+                            <tr>
+                                <th>Phase</th>
+                                <th>Tokens Available</th>
+                                <th>Price</th>
+                                <th>Total Value</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>Phase 1</td>
+                                <td>1,000,000 NXC</td>
+                                <td>$1.00</td>
+                                <td>$1,000,000</td>
+                            </tr>
+                            <tr>
+                                <td>Phase 2</td>
+                                <td>1,000,000 NXC</td>
+                                <td>$1.68</td>
+                                <td>$1,680,000</td>
+                            </tr>
+                            <tr>
+                                <td>Phase 3</td>
+                                <td>1,000,000 NXC</td>
+                                <td>$2.82</td>
+                                <td>$2,820,000</td>
+                            </tr>
+                            <tr>
+                                <td>Phase 4</td>
+                                <td>1,000,000 NXC</td>
+                                <td>$4.74</td>
+                                <td>$4,740,000</td>
+                            </tr>
+                            <tr>
+                                <td>Phase 5</td>
+                                <td>1,000,000 NXC</td>
+                                <td>$7.97</td>
+                                <td>$7,970,000</td>
+                            </tr>
+                            <tr>
+                                <td>Phase 6</td>
+                                <td>1,000,000 NXC</td>
+                                <td>$13.38</td>
+                                <td>$13,380,000</td>
+                            </tr>
+                            <tr>
+                                <td>Phase 7</td>
+                                <td>1,000,000 NXC</td>
+                                <td>$22.48</td>
+                                <td>$22,480,000</td>
+                            </tr>
+                            <tr>
+                                <td>Phase 8</td>
+                                <td>1,000,000 NXC</td>
+                                <td>$37.67</td>
+                                <td>$37,670,000</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+
+                <h3>Opportunity for Early Investors</h3>
+                <p>Each phase of the ICO gives investors a significant opportunity to achieve substantial returns, with the price increasing by <strong>68%</strong> after each phase. Early investors who buy in the first phases will be able to acquire tokens at lower prices compared to those buying in the later phases.</p>
+
+                <h3>End of ICO and Token Listing</h3>
+                <p>After the completion of all ICO phases, the NXC token will be available for free trading on <strong>PancakeSwap</strong>. Additionally, the token will be transferred from the <strong>Binance Smart Chain</strong> to the new Nexura blockchain once the project is officially launched.</p>
+
+                <h3>Benefits for Investors</h3>
+                <ul>
+                    <li>Opportunity to buy NXC tokens at low prices in the early phases.</li>
+                    <li>Significant returns can be achieved as the price increases by 68% in each phase.</li>
+                    <li>Support for the Nexura project, which offers opportunities for investors to engage with an innovative and sustainable ecosystem.</li>
+                    <li>Benefit from asset-backed tokens and future coins.</li>
+                </ul>
+
+                <h3>Conclusion</h3>
+                <p>The <strong>NXC</strong> token is a promising asset that opens up significant opportunities for investors within an innovative and sustainable economic environment. The ICO will be a great opportunity for early investors to achieve substantial returns and expand the scope of the <strong>Nexura</strong> project through a network of asset-backed coins.</p>
+            </div>
+        </section>
     </main>
     <footer>
-        <p>© 2024 Nexura. All rights reserved.</p>
+        <div class="container">
+            <p>© 2024 Nexura. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
