--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li><a href="about.html">Why Nexura</a></li>
                     <li><a href="token.html">Token</a></li>
                     <li><a href="whitepaper.html">Whitepaper</a></li>
                     <li><a href="contact.html">Contact</a></li>
