--- a/whitepaper.html
+++ b/whitepaper.html
@@ -8,7 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>Whitepaper</h1>
+        <div class="container">
+            <div class="logo">
+                <h1>Whitepaper</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">Why Nexura</a></li>
+                    <li><a href="token.html">Token</a></li>
+                    <li><a href="whitepaper.html">Whitepaper</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <p>Our whitepaper outlines the vision, strategy, and operational model of Nexura. Download it below to learn more about how we plan to reshape asset investments.</p>
